<resources>
  <string name="app_name_debug" translatable="false">الاوردر</string>
  <string name="app_name" translatable="false">الاوردر</string>

  <!-- General Strings -->
  <string name="empty_warning">This field is required</string>
  <string name="connection_error">Connection Error</string>
  <string name="no_internet">No internet connection please try again later</string>
  <string name="retry">Retry</string>
  <string name="cancel">Cancel</string>
  <string name="some_error">Some error occurred, try again later</string>

  <!-- Home -->
  <string name="home">Home</string>
  <string name="account">Account</string>

  <!-- Tutorial -->
  <string name="dot" translatable="false">•</string>
  <string name="next">Next</string>
  <string name="previous_app">السابق</string>
  <!-- Intro -->

  <!-- Log In -->
  <string name="log_in">Log In</string>
  <string name="email">Email Address</string>
  <string name="password">Password</string>
  <string name="forgot_your_password">Forgot your password?</string>
  <string name="not_have_account">Don\'t have an account?</string>
  <string name="empty_email">Please enter your email address</string>
  <string name="invalid_email">Please enter valid email address</string>
  <string name="empty_password">Please enter your password</string>

  <!-- Sign Up -->
  <string name="sign_up">Sign Up</string>

  <!-- Account -->
  <string name="log_out">Log Out</string>
  <string name="log_out_hint">Are you sure you want to log out?</string>
  <!--  <string name="google_api_key">Continue as Guest</string>-->
  <string name="send">Send</string>
  <string name="contact_us">Contact us</string>
  <string name="or">او عن طريق</string>
  <string name="register_name">اكتب اسمك</string>
  <string name="register_phone">أدخل رقم الهاتف الجوال</string>
  <string name="email_hint">أدخل البريد الإلكتروني</string>
  <string name="password_hint_confirm">قم بتأكيد كلمة المرور</string>
  <string name="agree_to">أوافق على</string>
  <string name="have_account">لدي حساب</string>
  <string name="privacy">سياسة الخصوصية</string>
  <string name="terms_auth">شروط الاستخدام |</string>
  <string name="confirm_header_text">تأكيد حسابك</string>
  <string name="confirm_resend">إعادة ارسال</string>
  <string name="confirm_header">أدخل كود التفعيل المرسل لك على بريدك الإلكتروني</string>
  <!--  <string name="rememeber">تذكرت كلمة المرور</string>-->
  <string name="change_title">كلمة مرور جديدة</string>
  <string name="change_body">من فضللك قم بكتابة كلمة مرور جديدة مع التأكد من عدم علم اي شخص بها</string>
  <string name="old_password">كلمة المرور القديمة</string>
  <string name="confirm">تأكيد</string>
  <string name="countries_title">أختر البلد , لتحديد المنهج الدراسي لك</string>
  <string name="soon">قريبا</string>
  <string name="school_grade_title">اختر المرحلة الدراسية</string>
  <string name="school_level_title">اختر الصف الدراسي</string>
  <string name="suggested_teachers">معلمين مقترحين</string>
  <string name="all">عرض الجميع</string>
  <string name="sections">مجموعات مقترحة</string>
  <string name="test">إختبر نفسك</string>
  <string name="profile">بياناتي الشخصية</string>
  <string name="my_groups">مجموعاتي</string>
  <string name="lessons">الحصص التعويضية</string>
  <string name="orders">المعلمين</string>
  <string name="menu_tests">الاختبارات</string>
  <string name="rate">تقيم</string>
  <string name="comment">من فضلك قم بأضافة تعليق</string>
  <string name="terms">الشروط والاحكام</string>
  <string name="suggestions">الشكاوي والاقتراحات</string>
  <string name="about">عن التطبيق</string>
  <string name="share_app">مشاركة التطبيق</string>
  <string name="rate_app">تقيم التطبيق</string>
  <string name="notifications">Notifications</string>
  <string name="show_details">عرض التفاصيل</string>
  <string name="change_password">تغير كلمة المرور</string>
  <string name="change_country">تغير الدولة</string>
  <string name="change_study">تغير بياناتي الدراسيه</string>
  <string name="register_name_teacher">اكتب اسمك المستعار</string>
  <string name="student">طالب</string>
  <string name="teacher">معلم</string>
  <string name="not_match_password">كلمتا المرور غير متطابقتان</string>
  <string name="empty_terms">يرجى الموافقه على الشروط والاحكام</string>
  <string name="empty_image">يرجى اختيار الصورة</string>
  <string name="continue_register_title">هل تريد استكمال البيانات ؟</string>
  <string name="yes">نعم</string>
  <string name="continue_register_body">يمكنك استكمال انشاء حسابك عند اخر خطوة</string>
  <string name="active">تفعيل الحساب</string>
  <string name="public_group">مجموعة عامة</string>
  <string name="private_group">مجموعة خاصة</string>
  <string name="both">مجموعة مختلطة</string>
  <string name="female_group">مجموعة اناث</string>
  <string name="male_group">مجموعة ذكور</string>
  <string name="social">مواقع التواصل الاجتماعي</string>
  <string name="male_gender">ذكر</string>
  <string name="female_gender">انثي</string>
  <string name="gender_type">النوع</string>
  <string name="change">تغيير</string>
  <string name="splash_title">ما تحتارش بين المناديب</string>
  <string name="splash_body">جمعناهم في مكان واحد</string>
  <string name="lets">يلا بينا</string>
  <string name="good_morinig">صباح الفل</string>
  <string name="log_in_head">سجل الدخول عشان تفعل حسابك عندنا</string>
  <string name="login_sign_up">أنشئ حساب جديد</string>
  <string name="enter_phone">ادخل رقم الهاتف</string>
  <string name="confirm_phone">تأكيد الرقم</string>
  <string name="confirm_cdoe">تأكيد الرمز</string>
  <string name="new_password">اكتب كلمة السر الجديدة</string>
  <string name="sign_up_head">إنشاء حساب جديد</string>
  <string name="sign_up_info">شوية معلومات عشان نعرف نوصلك</string>
  <string name="contact_number">رقم التواصل</string>
  <string name="password_hint">كلمه السر مكونة من 6 ارقام سهل تحفظها</string>
  <string name="tv_building_info">معلومات عن المنشأه</string>
  <string name="input_name_building">اسم المنشأه</string>
  <string name="input_name_building_location">حدد مكان المنشاه</string>
  <string name="save">حفظ المعلومات</string>
  <string name="detect_location_title">تفعيل خدمة تحديد المكان</string>
  <string name="detect_location_body">"هنستخدم تحديد المكان عشان المندوب يعرف يوصلك اسرع  متقلقش محدش يقدر يوصل لمعلوماتك الشخصيه "</string>
  <string name="detect_location_body1" />
  <string name="input_city_name">المدينة</string>
  <string name="input_district">الحى</string>
  <string name="input_note">اكتب تفاصيل العنوان زى لو المحل بتاعك جنب علامة مميزة</string>
  <string name="notification_warning_title">نفعيل خدمة الاشعارات</string>
  <string name="notification_warning_body">"فعل خدمة الاشعارات عشان يوصلك عروض الاوردر قبل اى حد "</string>
  <string name="notification_warning_cancel">الغاء</string>
  <string name="search_home">دور ونقى براحتك</string>
  <string name="offers">عروض نااار</string>
  <string name="company">الشركات</string>
    <string name="most_rated">الاكتر طلبا فى منطقتك</string>
  <string name="add_to_cart">زود على الطلبيه</string>
  <string name="order">الطلبيه</string>
    <string name="delivery_date">اختار الميعاد اللي يناسبك</string>
  <string name="detect_day">حدد اليوم المناسب</string>
  <string name="delivery_location">عنوان التوصيل</string>
  <string name="delivery_location_new">اضافه عنوان جديد</string>
  <string name="delivery_payment">طريقه الدفع</string>
  <string name="cash">كاش</string>
  <string name="debit">دفع أجل</string>
  <string name="delivery_payment_debit_amout">حتدفع قد ايه من الطلبيه</string>
  <string name="delivery_total_amount">الطلبية بـ</string>
  <string name="online">بطاقة بنكية  بطاقه ائتمانيه</string>
  <string name="confirm_order">تاكيد الطلبية</string>
  <string name="total_cost">اجمالى الشحنه</string>
  <string name="delivery">التوصيل</string>
  <string name="order_confirmed">تم تاكيد الطلبيه بنجاح</string>
  <string name="follow_orders">تابع طلبيتك</string>
  <string name="have_problem">عندى مشكلة</string>
  <string name="profile_contact">معلومات التواصل</string>
  <string name="favorite">المفضله</string>
  <string name="favorite_body">المنتجات المفضلة لديك</string>
  <string name="password_account">كلمه السر</string>
  <string name="tv_building_info_change">تغيير معلومات المنشأه</string>
  <string name="payment_account">مديونية الاجل</string>
  <string name="support">الدعم</string>
  <string name="order_same_company">زود على الطلبية من نفس الشركة</string>
  <string name="order_delegate">المندوب</string>
  <string name="confirm_received">تأكيد الاستلام</string>
  <string name="report">ايه المشكلة</string>
  <string name="wrong_product">غلط فى المنتج</string>
  <string name="wrong_price">غلط فى الحساب</string>
  <string name="more_info">اشرحلنا اكتر</string>
  <string name="send_report">ارسال الشكوى</string>
  <string name="receiving_done">تم الاستلام بنجاح</string>
  <string name="confirm_delegate">استنى التاكيد من المندوب</string>
  <string name="confirm_received_order">تم تأكيد استلام الطلبيه من المندوب</string>
  <string name="paied">دفعت الفلوس</string>
  <string name="payment_success">تم الدفع بنجاح</string>
  <string name="ok">تم</string>
  <string name="all_companies">كل الشركات</string>
  <string name="more">المزيد</string>

</resources>