<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/home_fragment"
    android:icon="@drawable/ic_home"
    android:title="@string/home" />
  <item
    android:id="@+id/contact_fragment"
    android:icon="@drawable/ic_contact"
    android:title="@string/contact_us" />
  <item
    android:id="@+id/privacy_fragment"
    android:icon="@drawable/ic_privacy"
    android:title="@string/privacy" />
  <item
    android:id="@+id/terms_fragment"
    android:icon="@drawable/ic_terms"
    android:title="@string/terms" />
  <item
    android:id="@+id/suggestions_fragment"
    android:icon="@drawable/ic_suggestions"
    android:title="@string/suggestions" />
  <item
    android:id="@+id/about_fragment"
    android:icon="@drawable/ic_about"
    android:title="@string/about" />
   <item
    android:id="@+id/social_fragment"
    android:icon="@drawable/ic_social_media"
    android:title="@string/social" />

  <item
      android:icon="@drawable/ic_share"
    android:title="@string/share_app" />
  <item
      android:icon="@drawable/ic_rate"
    android:title="@string/rate_app" />
  <item
      app:actionLayout="@layout/grand"
    android:title="" />

</menu>