<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dimen10"
      android:src="@drawable/ic_clear"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:tint="@color/black" />

    <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/detect_location"
      android:layout_width="@dimen/dimen150"
      android:layout_height="@dimen/dimen150"
      android:layout_marginTop="@dimen/dimen50"
      android:src="@drawable/ic_notification_on"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_location_title"
      style="@style/TextBoldFont"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen20"
      android:layout_marginBottom="@dimen/dimen50"
      android:gravity="center"
      android:text="@string/notification_warning_title"
      android:textAllCaps="true"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      android:textColor="@color/black"
      app:layout_constraintTop_toBottomOf="@+id/detect_location" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_location_body"
      style="@style/TextBoldFont"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dimen20"
      android:gravity="center"
      android:text="@string/notification_warning_body"
      android:textAllCaps="true"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/black_op"
      app:layout_constraintTop_toBottomOf="@+id/tv_location_title" />


    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/confirm"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dimen12"
      android:layout_marginTop="@dimen/dimen40"
      android:layout_marginEnd="@dimen/dimen12"
      android:layout_marginBottom="@dimen/dimen10"
      android:background="@drawable/btn_accent"
      android:text="@string/confirm"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="@id/tv_location_body"
      app:layout_constraintStart_toStartOf="@id/tv_location_body"
      app:layout_constraintTop_toBottomOf="@id/tv_location_body" />

    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/tv_cancel"
      style="@style/TextMediumFont"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dimen20"
      android:gravity="center"
      android:text="@string/notification_warning_cancel"
      android:textAllCaps="true"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/black_op"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/confirm"
      app:layout_constraintStart_toStartOf="@+id/confirm"
      app:layout_constraintTop_toBottomOf="@+id/confirm" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>